--- a/MaintenanceSystem/nbproject/project.properties
+++ b/MaintenanceSystem/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=MaintenanceSystem
-main.class=
+main.class=msystem.UserAuth
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
