First commit to create branch

--- a/MaintenanceSystem/nbproject/project.properties
+++ b/MaintenanceSystem/nbproject/project.properties
@@ -38,7 +38,7 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Database_Connection.classpath}
+    ${libs.Database_CConnection.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +78,7 @@ main.class=msystem.UserAuth
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_21
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
