--- a/MaintenanceSystem/nbproject/project.properties
+++ b/MaintenanceSystem/nbproject/project.properties
@@ -38,7 +38,7 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Database_CConnection.classpath}
+    ${libs.Database_Connection.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
