--- a/MaintenanceSystem/nbproject/project.properties
+++ b/MaintenanceSystem/nbproject/project.properties
@@ -35,10 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MaintenanceSystem
 endorsed.classpath=
 excludes=
+file.reference.SQL_Database-Dump20240330=..\\SQL Database\\Dump20240330
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Database_Connection.classpath}
+    ${libs.Database_Connection.classpath}:\
+    ${file.reference.SQL_Database-Dump20240330}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
