--- a/MaintenanceSystem/nbproject/project.properties
+++ b/MaintenanceSystem/nbproject/project.properties
@@ -78,7 +78,7 @@ main.class=msystem.UserAuth
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_21
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
